--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ body {
 <!--Links  -->
   <h2>Hello! </h2>
   <p>Are you new to climbing but trying to get a fast start or an experienced one trying to get to the next level?  
-  If you are, these exercises will help you meet your goals by challenging you in fundamental ways. 
+  If you are, check out the Progressions section for a slough of climbing-specific exercises! 
   </br>
   </br>
   <button data-toggle="collapse" data-target="#myCollapsible5" class="btn btn-primary">Show/Hide Exercise Themes</button>
