--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@ Scapular Shrugs - 5 reps * 5 sets</br>
 Scapular Pull-ups (tucked) - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=OYRAFPM2yDI">Demo</a> </br>
 Assisted Lever Pull - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=q5hXGcAETFM">Demo</a> </br>
 Scapular Pull-ups (one leg out or straddle)- 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=zymHuZDnD5U">Demo</a> </br>
-Front Lever- 5 seconds</br>
+Front Lever- 5 seconds<a href = "https://www.youtube.com/watch?v=TxKoh9NIFtU">Demo</a></br>
  </br>
 <h3>7. Inverted Row Prog.</h3></br>
 Inverted Ring Rows (leaning)- 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=wZPKoq1Ydcg">Demo</a> </br>
@@ -343,13 +343,13 @@ Shoulder Pull-ups (One Arm)- 5 reps * 5 sets <a href = "https://www.youtube.com/
 Weighted Pull-ups- 5 reps * 5 sets</br>
 Archer Pull-ups- 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=P-jeGDxcQZY">Demo</a>  </br>
 Typewriters- 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=fTP7rupsLCg">Demo</a></br>
-One-Arm Pull-ups- 5 reps * 5 sets</br>
+One-Arm Pull-ups- 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=RCCYTvxkQWE">Demo</a></br>
 Weighted One-Arm Pull-ups- 5 reps * 5 sets</br>
 </br>
 <h3>9. Muscle-up Prog.</h3> </br>
 Wide-set Pull-ups- 5 reps * 5 sets</br>
 Bar to Chest- 5 reps * 5 sets</br>
-Muscle-ups- 5 reps * 5 sets</br>
+Muscle-ups- 5 reps * 5 sets<a href = "https://www.youtube.com/watch?v=41RQW52vf3U">Demo</a></br>
 
 </p>
 <!-- </div> -->
