--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ body {
   </div>
 </div>
 	<div class ="container">
-	<img src="untitled.png" class="center">
+	<img src="cw1167.png" class="center">
 	</div>
 	
 <div class="container" style="margin-bottom: 30px">
