--- a/index.html
+++ b/index.html
@@ -117,13 +117,11 @@ body {
   <div class="container" style="display: flex;
     justify-content: center;
     align-items: center;">
-  <h1 style="color: #fff; height: 100vh" class ="opener" align="center"> CHALKWINGS TRAINING  </h1> 	
+  <h1 style="color: #fff; height: 100vh" class ="opener" align="center"> CHALKWINGS TRAINING <img src="cw167.png" class="center" style="height:100px; width:100px"> </h1> 	
   <p class="opener">Elevate your Rock Climbing using targeted, structured exercises to enhance performance and consistency.</p> 
   </div>
 </div>
-	<div class ="container">
-	<img src="cw167.png" class="center">
-	</div>
+	
 	
 <div class="container" style="margin-bottom: 30px">
 	<div class="row">
