--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@ nav-header {
 	background-color: blue
 }
 
+.circle {
+	border-radius: 50%
+	}
+	
 .opener {
 	background-color: rgba(5,4,2,0.1);
 }
@@ -117,7 +121,7 @@ body {
   <div class="container" style="display: flex;
     justify-content: center;
     align-items: center;">
-  <h1 style="color: #fff; height: 100vh" class ="opener" align="center"> CHALKWINGS TRAINING <img src="cw167.png" class="center" style="height:100px; width:100px"> </h1> 	
+  <h1 style="color: #fff; height: 100vh" class ="opener" align="center"> CHALKWINGS TRAINING <img src="cw167.png" class="center circle" style="height:100px; width:100px"> </h1> 	
   <p class="opener">Elevate your Rock Climbing using targeted, structured exercises to enhance performance and consistency.</p> 
   </div>
 </div>
