--- a/index.html
+++ b/index.html
@@ -275,7 +275,9 @@ body {
 </br>Variation 10: Double clutching
 </br>Not advised for beginners. With both hands on the bottom rung, simultaneously reach up for a higher one using both hands.</br>
 </br>
-<h2>Progressions! </h2>
+
+<img src = "mascotstand.png" class = "center">
+<h2>Progressions </h2>
 </br>Work on the first exercise of each Progression list.   Once you are able to do the full amount of reps + sets in one session, try adding reps + sets until you can do the next exercise in the list. (videos to come!)
  
 </br>
