--- a/index.html
+++ b/index.html
@@ -358,7 +358,8 @@ Muscle-ups- 5 reps * 5 sets<a href = "https://www.youtube.com/watch?v=41RQW52vf3
 </p>
 <!-- </div> -->
 </div>
- 
+
+<img src= "mascotlie.png" class = "center">
 
 <div class="container" id="p1">
 <div class="page-header"> 
