--- a/index.html
+++ b/index.html
@@ -622,7 +622,7 @@ Muscle-ups- 5 reps * 5 sets<a href = "https://www.youtube.com/watch?v=41RQW52vf3
 </div>
 </div>
 
-
+<img src = "mascotfly.png" class = "center">
 
  <div id="myCarousel" class="carousel slide center" data-ride="carousel" style="width: 500px; margin-bottom: 30px">
     <!-- Indicators -->
