--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@ Muscle-ups- 5 reps * 5 sets<a href = "https://www.youtube.com/watch?v=41RQW52vf3
 <button data-toggle="collapse" data-target="#myCollapsible1" class="btn btn-warning">Show/Hide Details</button>
     <div id="myCollapsible1" class="collapse">  
   <p>
-  <span class="bold">Ring Flies: </span>This is one of my favorite exercises that I've seen Alex Megos do. Ring Flies will allow you to hang more actively on the wall and build compression strength.  Set the rings shoulder-width apart and a few inches off the ground.
+  <span class="bold">Ring Flies: </span>This is one of my favorite exercises (inspired by Alexander Megos). Ring Flies will allow you to hang more actively on the wall and build compression strength.  Set the rings shoulder-width apart and a few inches off the ground.
   Put your hands into the rings and rest on your knees.  
   </br> Variations: 
   Lean onto your hands and bring them apart so your nose almost touches the ground.
@@ -484,8 +484,8 @@ Muscle-ups- 5 reps * 5 sets<a href = "https://www.youtube.com/watch?v=41RQW52vf3
   <span class="bold">Scapular Pull-ups: </span>Acquiring scapula (shoulder blade) strength results in greater control of your arms since your scapulae control them.
   The way to perform these is to hang on a bar with your hands shoulder-width.
   First, you want to sink your head between your shoulders then you want to shrug so you enter an active hang.
-  </br><span class="bold">Front Lever: </span> The Front Lever is well-known for being the one of the hardest pushing/core exercises amongst gymnasts and for good reason. 
-  If you need inspiration, just watch Sean McColl doing one. 
+  </br><span class="bold">Front Lever: </span> The Front Lever is well-known for being the one of the hardest pushing/core exercises amongst gymnasts and for good reason. (inspired by Sean McColl)
+  
 
   </p>
   </div>
@@ -553,7 +553,7 @@ Muscle-ups- 5 reps * 5 sets<a href = "https://www.youtube.com/watch?v=41RQW52vf3
   <p>
   <span class="bold">Type-writers: </span> While lock-off strength is important it is debatable whether simply doing it is the best way of improving it.
   </br><span class="bold">Bar to Chest: </span> These are pull-ups that are dynamic and build explosive power.
-  </br><span class="bold">One-arm Pull-up: </span> While difficult, make sure you squeeze the bar as hard as you can, start with your body perpendicular to the bar, and fold your body inwards.
+  </br><span class="bold">One-arm Pull-up: </span> (Inspired by Alex Puccio) While difficult, make sure you squeeze the bar as hard as you can, start with your body perpendicular to the bar, and fold your body inwards.
   </p>
 
   </div>
@@ -614,7 +614,7 @@ Muscle-ups- 5 reps * 5 sets<a href = "https://www.youtube.com/watch?v=41RQW52vf3
     <div id="myCollapsible4" class="collapse">
   <p>
   Lower body strength is not as important as lower body flexibility, namely in the hip flexors and adductors. 
-  This is because flexibility is what allows you to place head-high heel hooks, reach very far high/far footholds, stay closer to the wall, match feet to hands, etc.
+  This is because flexibility is what allows you to place head-high heel hooks (like Ashima Shiraishi), reach very far high/far footholds, stay closer to the wall, match feet to hands, etc.
   On the other hand, strength is mostly only tested when stepping off a single foothold with the other leg disengaged or jumping off large holds.
   A good benchmark is being able to do a single pistol squat on each side.
   </p>
