--- a/index.html
+++ b/index.html
@@ -222,6 +222,11 @@ body {
 	<button data-toggle="collapse" data-target="#myCollapsible0" class="btn btn-warning">Show/Hide Suggested Workout</button>
     <div id="myCollapsible0" class="collapse">  -->
 <p>
+	<h2>Coming Soon:</h2>
+	Animal Walks
+	Reverse Skin the Cat
+	Asymmetrical Flies
+	Russian Dips
 	<h2>Finger Strength Exercises</h2>
 </br>
 </br><h3>Hangboard</h3>
@@ -678,6 +683,33 @@ Muscle-ups- 5 reps * 5 sets<a href = "https://www.youtube.com/watch?v=41RQW52vf3
 <iframe class="center" width="560" height="315" src="https://www.youtube.com/embed/TxKoh9NIFtU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 </div>
 
+<div class ='container'>
+<h1> Useful Links </h1>																		 
+
+
+<a href="http://trainingforclimbing.com/">Eric Horst
+				       </a>
+<a href="https://www.trainingbeta.com/">Training Beta
+				       </a>
+<a href="http://en-eva-lopez.blogspot.com/">Eva Lopez
+				       </a>				  
+<!--
+<a href="https://www.youtube.com/channel/UCvkGOw5JmJ3TPdXNiEFwq6Q">Mani the Monkey
+				       </a>
+								  
+<a href="https://www.youtube.com/user/TheMiamiTrainer">THENX
+				       </a>
+<a href="https://www.youtube.com/watch?v=KdKvBRSx0_A">Splits Routine
+				       </a>
+<a href="https://www.youtube.com/user/kaiwinbot">Ten Thousand Method
+						</a>
+<a href="https://www.youtube.com/watch?v=sWjTnBmCHTY">8 Minute Abs
+						</a>
+<a href="https://www.youtube.com/user/JDCav24">Athlean
+						</a>
+<a href="https://www.youtube.com/channel/UCPx2nKfFk4p6IkQsMW9O0xQ/featured">Vahva Fitness
+						</a>					      
+-->																		 
 
 <div class='container' id="p6">
 	<div class="page-header"> 
