--- a/index.html
+++ b/index.html
@@ -223,9 +223,9 @@ body {
     <div id="myCollapsible0" class="collapse">  -->
 <p>
 	<h2>Coming Soon:</h2>
-	Animal Walks
-	Reverse Skin the Cat
-	Asymmetrical Flies
+	Animal Walks </br>
+	Reverse Skin the Cat</br>
+	Asymmetrical Flies</br>
 	Russian Dips
 	<h2>Finger Strength Exercises</h2>
 </br>
@@ -688,9 +688,9 @@ Muscle-ups- 5 reps * 5 sets<a href = "https://www.youtube.com/watch?v=41RQW52vf3
 
 
 <a href="http://trainingforclimbing.com/">Eric Horst
-				       </a>
+				       </a></br>
 <a href="https://www.trainingbeta.com/">Training Beta
-				       </a>
+				       </a></br>
 <a href="http://en-eva-lopez.blogspot.com/">Eva Lopez
 				       </a>				  
 <!--
