--- a/index.html
+++ b/index.html
@@ -227,6 +227,23 @@ body {
 	Reverse Skin the Cat</br>
 	Asymmetrical Flies</br>
 	Russian Dips
+Intermediate Workout: (draft) </br>
+
+pike pushup 15reps x 3 sets 1min rests</br>
+x push up 15reps x 3 sets 1min rests</br>
+
+leaning pullup 7reps x 5 sets 3min rests</br>
+band pulls 7reps x 5 sets 3min rests</br>
+
+leaning row 7reps x 5 sets 3min rests</br>
+one arm row 7reps x 5 sets 3min rests</br>
+
+scapular pullup depression 5reps x 1 set</br>
+scapular pullup retraction 5reps x 5 sets 3min rests</br>
+
+tucked lying windwhield wiper 5reps x 5sets 3min rests</br>
+leg raises 15reps x 3 sets 1min rests</br>
+
 	<h2>Finger Strength Exercises</h2>
 </br>
 </br><h3>Hangboard</h3>
