--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@ body {
 	Animal Walks </br>
 	Reverse Skin the Cat</br>
 	Asymmetrical Flies</br>
-	Russian Dips
+	Russian Dips </br>
 Intermediate Workout: (draft) </br>
 
 pike pushup 15reps x 3 sets 1min rests</br>
