--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ body {
 		<li><a href="#p3">Arms</a></li>
 		<li><a href="#p4">Legs</a></li>	
 		<li><a href="#p5">Customizing</a></li>	
-		<li><a href="#p6">About Me</a></li>	
+		<li><a href="https://rjk79.github.io/tt/about">About Me</a></li>	
 	</ul>
 </nav>
 </div>
