--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ body {
 	</div>
 </div>	
 
-<div class="container">
+<div class="container" style="margin-bottom: 30px">
 	<div class="row">
     	<div class="col-sm-4">
         	<div class="part-image">
