--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ body {
    		
    		<div class="col-sm-4">
         	<div class="part-image">
-				<a href="#https://rjk79.github.io/tt/frontlever">
+				<a href="https://rjk79.github.io/tt/frontlever">
             	<img src="plan1.jpg" class="img-responsive bodyarea">
             	</a>        
             	<div class="centered"><h3>Core Tension 2</h3></div>
@@ -212,7 +212,7 @@ body {
    		
    		<div class="col-sm-4">
         	<div class="part-image">
-				<a href="#https://rjk79.github.io/tt/muscleup">
+				<a href="https://rjk79.github.io/tt/muscleup">
             	<img src="plan1.jpg" class="img-responsive bodyarea">
             	</a>        
             	<div class="centered"><h3>Power</h3></div>
