--- a/index.html
+++ b/index.html
@@ -254,11 +254,15 @@ body {
 	<button data-toggle="collapse" data-target="#myCollapsible0" class="btn btn-warning">Show/Hide Suggested Workout</button>
     <div id="myCollapsible0" class="collapse">  -->
 <p>
+<!--
 	<h2>Coming Soon:</h2>
 	Animal Walks </br>
 	Reverse Skin the Cat</br>
 	Asymmetrical Flies</br>
 	Russian Dips </br>
+-->
+	<h2>Updates:</h2>
+	MENU LINKS WILL BE FIXED
 Intermediate Workout: (draft) </br>
 
 pike pushup 15reps x 3 sets 1min rests</br>
@@ -276,7 +280,35 @@ scapular pullup retraction 5reps x 5 sets 3min rests</br>
 tucked lying windwhield wiper 5reps x 5sets 3min rests</br>
 leg raises 15reps x 3 sets 1min rests</br>
 
-	<h2>Finger Strength Exercises</h2>
+New-to-Training Workout // Week 1 of 8/26.  </br>
+- Choose 3 Non-consecutive days to do this workout (8MinuteAbs can be everyday) (takes about 1 hour)</br>
+- take a minute of rest after every bullet point </br>
+
+•	(Optional) Lose Weight -- Jump Rope for 10 min or Traverse for 10 min</br>
+•	Core -- Abs </br>
+https://www.youtube.com/watch?v=sWjTnBmCHTY </br>
+
+Repeat the following list 3 times:</br>
+
+•	Vertical Pull -- Do as many L-Sit Pull-ups as you can.  Afterwards, do as many normal pull-ups as you can with a elastic band</br>
+https://www.youtube.com/watch?v=QH0dDfyF7QM </br>
+
+•	Horizontal Push -- Do as many X-Push-ups as you can. Afterwards, do as many normal push-ups as you can </br>
+https://www.youtube.com/watch?v=2qa1avIsLaA </br>
+
+•	Fingers -- 6 Repeaters  </br>
+https://youtu.be/7bS-19Cl8Kk?t=120 </br>
+
+•	Vertical Push -- Do as many Assisted Dips as you can https://www.youtube.com/watch?v=IOlHTsmfr68 </br>
+
+•	Horizontal Pull -- Do as many Ring Rows as you can https://www.youtube.com/watch?v=Qj8ixEU638M </br>
+
+•	Shoulders -- 5 Depression Scapular Pull-Ups https://www.youtube.com/watch?v=icD6a_JcCbQ </br>
+
+•	Shoulders -- 5 Retraction Scapular Pull-Ups </br>
+https://youtu.be/6P9r0UAdwXM?t=69 </br>
+
+	<h2>Finger Strength Exercises</h2> 
 </br>
 </br><h3>Hangboard</h3>
 </br>
