--- a/index.html
+++ b/index.html
@@ -285,28 +285,28 @@ New-to-Training Workout // Week 1 of 8/26.  </br>
 - take a minute of rest after every bullet point </br>
 
 •	(Optional) Lose Weight -- Jump Rope for 10 min or Traverse for 10 min</br>
-•	Core -- Abs </br>
-https://www.youtube.com/watch?v=sWjTnBmCHTY </br>
+•	Core -- <a href="https://www.youtube.com/watch?v=sWjTnBmCHTY">Abs</a> </br>
+ </br>
 
 Repeat the following list 3 times:</br>
 
 •	Vertical Pull -- Do as many L-Sit Pull-ups as you can.  Afterwards, do as many normal pull-ups as you can with a elastic band</br>
 https://www.youtube.com/watch?v=QH0dDfyF7QM </br>
 
-•	Horizontal Push -- Do as many X-Push-ups as you can. Afterwards, do as many normal push-ups as you can </br>
-https://www.youtube.com/watch?v=2qa1avIsLaA </br>
+•	Horizontal Push -- Do as many <a href = "https://www.youtube.com/watch?v=2qa1avIsLaA">X-Push-ups</a> as you can. Afterwards, do as many normal push-ups as you can </br>
+ </br>
 
 •	Fingers -- 6 Repeaters  </br>
 https://youtu.be/7bS-19Cl8Kk?t=120 </br>
 
-•	Vertical Push -- Do as many Assisted Dips as you can https://www.youtube.com/watch?v=IOlHTsmfr68 </br>
+•	Vertical Push -- Do as many <a href = "https://www.youtube.com/watch?v=IOlHTsmfr68 ">Assisted Dips</a> as you can </br>
 
-•	Horizontal Pull -- Do as many Ring Rows as you can https://www.youtube.com/watch?v=Qj8ixEU638M </br>
+•	Horizontal Pull -- Do as many <a href = "https://www.youtube.com/watch?v=Qj8ixEU638M">Ring Rows</a> as you can  </br>
 
-•	Shoulders -- 5 Depression Scapular Pull-Ups https://www.youtube.com/watch?v=icD6a_JcCbQ </br>
+•	Shoulders -- 5 Depression <a href = "https://www.youtube.com/watch?v=icD6a_JcCbQ">Scapular Pull-Ups</a>  </br>
 
-•	Shoulders -- 5 Retraction Scapular Pull-Ups </br>
-https://youtu.be/6P9r0UAdwXM?t=69 </br>
+•	Shoulders -- 5 Retraction <a href = "https://youtu.be/6P9r0UAdwXM?t=69">Scapular Pull-Ups</a> </br>
+ </br>
 
 	<h2>Finger Strength Exercises</h2> 
 </br>
