--- a/index.html
+++ b/index.html
@@ -279,8 +279,9 @@ scapular pullup retraction 5reps x 5 sets 3min rests</br>
 
 tucked lying windwhield wiper 5reps x 5sets 3min rests</br>
 leg raises 15reps x 3 sets 1min rests</br>
-
-New-to-Training Workout // Week 1 of 8/26.  </br>
+</br>
+</br>
+<h2>New-to-Training Workout // Week 1 of 8/26.</h2>  </br>
 - Choose 3 Non-consecutive days to do this workout (8MinuteAbs can be everyday) (takes about 1 hour)</br>
 - take a minute of rest after every bullet point </br>
 
@@ -296,16 +297,16 @@ https://www.youtube.com/watch?v=QH0dDfyF7QM </br>
 •	Horizontal Push -- Do as many <a href = "https://www.youtube.com/watch?v=2qa1avIsLaA">X-Push-ups</a> as you can. Afterwards, do as many normal push-ups as you can </br>
  </br>
 
-•	Fingers -- 6 Repeaters  </br>
-https://youtu.be/7bS-19Cl8Kk?t=120 </br>
+•	Fingers -- 6 <a href = "https://youtu.be/7bS-19Cl8Kk?t=120 ">Repeaters</a>  </br>
+ </br>
 
 •	Vertical Push -- Do as many <a href = "https://www.youtube.com/watch?v=IOlHTsmfr68 ">Assisted Dips</a> as you can </br>
 
 •	Horizontal Pull -- Do as many <a href = "https://www.youtube.com/watch?v=Qj8ixEU638M">Ring Rows</a> as you can  </br>
 
-•	Shoulders -- 5 Depression <a href = "https://www.youtube.com/watch?v=icD6a_JcCbQ">Scapular Pull-Ups</a>  </br>
+•	Shoulders -- 5 <a href = "https://www.youtube.com/watch?v=icD6a_JcCbQ"> Depression Scapular Pull-Ups</a>  </br>
 
-•	Shoulders -- 5 Retraction <a href = "https://youtu.be/6P9r0UAdwXM?t=69">Scapular Pull-Ups</a> </br>
+•	Shoulders -- 5 <a href = "https://youtu.be/6P9r0UAdwXM?t=69">Retraction Scapular Pull-Ups</a> </br>
  </br>
 
 	<h2>Finger Strength Exercises</h2> 
