--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@ body {
   </div>
 </div>
 	
+	<p>	MENU LINKS are currently broken but WILL BE FIXED </p>
 	
 <div class="container" style="margin-bottom: 30px">
 	<div class="row">
@@ -262,7 +263,7 @@ body {
 	Russian Dips </br>
 -->
 	<h2>Updates:</h2>
-	MENU LINKS WILL BE FIXED
+	
 Intermediate Workout: (draft) </br>
 
 pike pushup 15reps x 3 sets 1min rests</br>
