--- a/index.html
+++ b/index.html
@@ -292,8 +292,8 @@ leg raises 15reps x 3 sets 1min rests</br>
 
 Repeat the following list 3 times:</br>
 
-•	Vertical Pull -- Do as many L-Sit Pull-ups as you can.  Afterwards, do as many normal pull-ups as you can with a elastic band</br>
-https://www.youtube.com/watch?v=QH0dDfyF7QM </br>
+•	Vertical Pull -- Do as many <a href = "https://www.youtube.com/watch?v=QH0dDfyF7QM">L-Sit Pull-ups</a> as you can.  Afterwards, do as many normal pull-ups as you can with a elastic band</br>
+ </br>
 
 •	Horizontal Push -- Do as many <a href = "https://www.youtube.com/watch?v=2qa1avIsLaA">X-Push-ups</a> as you can. Afterwards, do as many normal push-ups as you can </br>
  </br>
