--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ body {
   </div>
 </div>
 	
-	<p>	MENU LINKS are currently broken but WILL BE FIXED </p>
+	<p>	MENU LINKS are currently broken but wil be fixed SOON. In the meantime, a page about my upcoming iPhone App is under construction.. </p>
 	
 <div class="container" style="margin-bottom: 30px">
 	<div class="row">
