--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@ Repeat the following list 3 times:</br>
 </br>
 </br><h3>Hangboard</h3>
 </br>
-</br>Variation 1: Repeaters <a href = "https://www.youtube.com/watch?v=8YTn7qEpxtU">Demo</a> </br>
+</br>Variation 1: Repeaters <a href = "https://www.youtube.com/watch?v=8YTn7qEpxtU">Demo Video</a> </br>
 </br>Choose a pair of edges that are 10-15mm and can hold all four fingers.  Using an open-crimp position, hang off the edges for 7 seconds then rest for 3 seconds.  Repeat this 5 more times for a total of 6 hangs.
 </br>
 </br>Variation 2:
@@ -352,10 +352,10 @@ Repeat the following list 3 times:</br>
 </br>Variation 5: 
 </br>Do Variation 4 then reach as high as you can with you’re other hand.
 </br>
-</br>Variation 6: Bumping <a href = "https://www.youtube.com/watch?v=xLPdz0n5hkE">Demo</a> 
+</br>Variation 6: Bumping <a href = "https://www.youtube.com/watch?v=xLPdz0n5hkE">Demo Video</a> 
 </br>With both hands on the bottom rung, move one hand up to the next rung, then the next rung, etc until you cannot go further.
 </br>
-</br>Variation 7: Alternating <a href = "https://www.youtube.com/watch?v=RhAutTnvAgQ">Demo</a> 
+</br>Variation 7: Alternating <a href = "https://www.youtube.com/watch?v=RhAutTnvAgQ">Demo Video</a> 
 </br>With both hands on the bottom rung, move one hand up to a higher rung then bring it back down to the bottom rung and repeat.  Adjust difficulty by adding reps and reaching higher.
 </br>
 </br>Variation 8: Downclimbing
@@ -374,78 +374,78 @@ Repeat the following list 3 times:</br>
  
 </br>
 <h3>1. Dips and Iron Cross Prog.</h3> </br>
-Band pull - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=1xEizoLOqmA">Demo</a> </br>
+Band pull - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=1xEizoLOqmA">Demo Video</a> </br>
 Assisted Dips - 5 reps * 5 sets</br>
 Dips - 5 reps * 5 sets</br>
-Ring hold - 5 seconds <a href = "https://www.youtube.com/watch?v=iODfBpAI2hc">Demo</a></br>
+Ring hold - 5 seconds <a href = "https://www.youtube.com/watch?v=iODfBpAI2hc">Demo Video</a></br>
 Weighted Dips - 5 reps * 5 sets</br>
-Ring Dips - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=CONXdUoBzdI">Demo</a> </br>
-Half Cross - 10 seconds * 3 sets <a href = "https://www.youtube.com/watch?v=vK8LxtyKZf0">Demo</a> </br>
-Strap Cross - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=vH1w7DQhafc">Demo</a> </br>
+Ring Dips - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=CONXdUoBzdI">Demo Video</a> </br>
+Half Cross - 10 seconds * 3 sets <a href = "https://www.youtube.com/watch?v=vK8LxtyKZf0">Demo Video</a> </br>
+Strap Cross - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=vH1w7DQhafc">Demo Video</a> </br>
  </br>
 <h3>2. Flies and Planche Prog.</h3></br>
 Push-ups - 10 reps * 3 sets</br>
-X push-ups - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=IOQjVhXOEeo">Demo</a> </br>
-Push-ups (on rings) - 5 reps * 5 sets<a href = "https://www.youtube.com/watch?v=7enjS7Y2LYc">Demo</a></br>
-Ring Flies (on knees, feet up) - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=svLqaM6-cnQ">Demo</a> </br>
-Ring Flies (on knees, feet down) - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=sMB6GrrRX2Y">Demo</a> </br>
-Ring Flies - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=Q1hgPfcooGc">Demo</a> </br>
-Pseudo Planche Pushups - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=CVUM4BKIbf8">Demo</a> </br>
-Raised Ring Flies - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=PNo7ZEUtOms">Demo</a> </br>
+X push-ups - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=IOQjVhXOEeo">Demo Video</a> </br>
+Push-ups (on rings) - 5 reps * 5 sets<a href = "https://www.youtube.com/watch?v=7enjS7Y2LYc">Demo Video</a></br>
+Ring Flies (on knees, feet up) - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=svLqaM6-cnQ">Demo Video</a> </br>
+Ring Flies (on knees, feet down) - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=sMB6GrrRX2Y">Demo Video</a> </br>
+Ring Flies - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=Q1hgPfcooGc">Demo Video</a> </br>
+Pseudo Planche Pushups - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=CVUM4BKIbf8">Demo Video</a> </br>
+Raised Ring Flies - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=PNo7ZEUtOms">Demo Video</a> </br>
 
  </br>
 <h3>3. Dragon Flag Prog.</h3></br>
-Lying Leg Raises - 10 reps * 3 sets <a href = "https://www.youtube.com/watch?v=qJt-Ah-lWCw">Demo</a> </br>
+Lying Leg Raises - 10 reps * 3 sets <a href = "https://www.youtube.com/watch?v=qJt-Ah-lWCw">Demo Video</a> </br>
 V-ups - 10 reps * 3 sets</br>
-Leg-ups - 10 reps * 3 sets <a href = "https://www.youtube.com/watch?v=g2R_Y9rE0Hg">Demo</a> </br>
-Toes to Bar - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=X4n7GKTQhwg">Demo</a> </br> 
-Dragon Flag - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=gub2VJbEF-c">Demo</a> </br>
+Leg-ups - 10 reps * 3 sets <a href = "https://www.youtube.com/watch?v=g2R_Y9rE0Hg">Demo Video</a> </br>
+Toes to Bar - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=X4n7GKTQhwg">Demo Video</a> </br> 
+Dragon Flag - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=gub2VJbEF-c">Demo Video</a> </br>
  </br>
 <h3>4. Superman Flies Prog.</h3></br>
 Plank - 90 seconds</br>
 Crunches - 40 reps * 1 set</br>
 Ab Wheel Rollouts - 5 reps * 5 sets</br>
-Knee Superman Flies - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=hZFOcyaL_ds">Demo</a> </br>
-Superman Flies (one arm) - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=Ubd5IHuYlTo">Demo</a> </br>
-Superman Flies - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=svq_tDPVl9A">Demo</a> </br>
+Knee Superman Flies - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=hZFOcyaL_ds">Demo Video</a> </br>
+Superman Flies (one arm) - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=Ubd5IHuYlTo">Demo Video</a> </br>
+Superman Flies - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=svq_tDPVl9A">Demo Video</a> </br>
  </br>
 <h3>5. Windshield Wiper Prog.</h3></br>
 Side planks - 90 seconds</br>
-Side Crunches - 40 reps * 1 set <a href = "https://www.youtube.com/watch?v=E3pHxKVfsz0">Demo</a> </br>
-Thread the Needle- 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=xXyIJAg8LFU">Demo</a> </br>
-Russian Twists- 10 reps * 3 sets <a href = "https://www.youtube.com/watch?v=jIStaPoxupI">Demo</a> </br>
-Windshield Wipers (ground) - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=hrS3QsNqvTQ">Demo</a>  </br>
-Windshield Wipers (tucked, on bar) - 5 reps * 5 sets<a href = "https://www.youtube.com/watch?v=xM5ojvBKI94">Demo</a></br> 
-Windshield Wipers (extended, on bar) - 3 reps * 5 sets <a href = "https://www.youtube.com/watch?v=cQPehma273s">Demo</a> </br>
+Side Crunches - 40 reps * 1 set <a href = "https://www.youtube.com/watch?v=E3pHxKVfsz0">Demo Video</a> </br>
+Thread the Needle- 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=xXyIJAg8LFU">Demo Video</a> </br>
+Russian Twists- 10 reps * 3 sets <a href = "https://www.youtube.com/watch?v=jIStaPoxupI">Demo Video</a> </br>
+Windshield Wipers (ground) - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=hrS3QsNqvTQ">Demo Video</a>  </br>
+Windshield Wipers (tucked, on bar) - 5 reps * 5 sets<a href = "https://www.youtube.com/watch?v=xM5ojvBKI94">Demo Video</a></br> 
+Windshield Wipers (extended, on bar) - 3 reps * 5 sets <a href = "https://www.youtube.com/watch?v=cQPehma273s">Demo Video</a> </br>
 </br>
 <h3>6. Front Lever Prog.</h3></br>
 Scapular Shrugs - 5 reps * 5 sets</br>
-Scapular Pull-ups (tucked) - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=OYRAFPM2yDI">Demo</a> </br>
-Assisted Lever Pull - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=q5hXGcAETFM">Demo</a> </br>
-Scapular Pull-ups (one leg out or straddle)- 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=zymHuZDnD5U">Demo</a> </br>
-Front Lever- 5 seconds<a href = "https://www.youtube.com/watch?v=TxKoh9NIFtU">Demo</a></br>
+Scapular Pull-ups (tucked) - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=OYRAFPM2yDI">Demo Video </a> </br>
+Assisted Lever Pull - 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=q5hXGcAETFM">Demo Video</a> </br>
+Scapular Pull-ups (one leg out or straddle)- 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=zymHuZDnD5U">Demo Video</a> </br>
+Front Lever- 5 seconds<a href = "https://www.youtube.com/watch?v=TxKoh9NIFtU">Demo Video</a></br>
  </br>
 <h3>7. Inverted Row Prog.</h3></br>
-Inverted Ring Rows (leaning)- 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=wZPKoq1Ydcg">Demo</a> </br>
-Inverted Ring Rows (one arm)- 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=C3F4ltRbDOE">Demo</a> </br>
-Inverted Ring Rows (legs propped up)- 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=OH3QZB8oDkg">Demo</a>  </br>
-Inverted Ring Rows (hanging)- 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=dZQMlqx9aOk">Demo</a> </br>
+Inverted Ring Rows (leaning)- 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=wZPKoq1Ydcg">Demo Video</a> </br>
+Inverted Ring Rows (one arm)- 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=C3F4ltRbDOE">Demo Video</a> </br>
+Inverted Ring Rows (legs propped up)- 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=OH3QZB8oDkg">Demo Video</a>  </br>
+Inverted Ring Rows (hanging)- 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=dZQMlqx9aOk">Demo Video</a> </br>
  </br>
 <h3>8. One Arm Pull-up Prog.</h3></br>
 Assisted Pull-ups- 5 reps * 5 sets</br>
 Pull-ups- 5 reps * 5 sets</br>
 One Arm Bar Hold- 30 seconds</br>
-Shoulder Pull-ups (One Arm)- 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=MjawoDfKqf0">Demo</a> </br>
+Shoulder Pull-ups (One Arm)- 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=MjawoDfKqf0">Demo Video</a> </br>
 Weighted Pull-ups- 5 reps * 5 sets</br>
-Archer Pull-ups- 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=P-jeGDxcQZY">Demo</a>  </br>
-Typewriters- 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=fTP7rupsLCg">Demo</a></br>
-One-Arm Pull-ups- 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=RCCYTvxkQWE">Demo</a></br>
+Archer Pull-ups- 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=P-jeGDxcQZY">Demo Video</a>  </br>
+Typewriters- 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=fTP7rupsLCg">Demo Video</a></br>
+One-Arm Pull-ups- 5 reps * 5 sets <a href = "https://www.youtube.com/watch?v=RCCYTvxkQWE">Demo Video</a></br>
 Weighted One-Arm Pull-ups- 5 reps * 5 sets</br>
 </br>
 <h3>9. Muscle-up Prog.</h3> </br>
 Wide-set Pull-ups- 5 reps * 5 sets</br>
 Bar to Chest- 5 reps * 5 sets</br>
-Muscle-ups- 5 reps * 5 sets<a href = "https://www.youtube.com/watch?v=41RQW52vf3U">Demo</a></br>
+Muscle-ups- 5 reps * 5 sets<a href = "https://www.youtube.com/watch?v=41RQW52vf3U">Demo Video</a></br>
 
 </p>
 <!-- </div> -->
