--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@ tucked lying windwhield wiper 5reps x 5sets 3min rests</br>
 leg raises 15reps x 3 sets 1min rests</br>
 </br>
 </br>
-<h2>New-to-Training Workout // Week 1 of 8/26.</h2>  </br>
+<h2>New-to-Training Workout // Week 1-3 </h2>  </br>
 - Choose 3 Non-consecutive days to do this workout (8MinuteAbs can be everyday) (takes about 1 hour)</br>
 - take a minute of rest after every bullet point </br>
 
@@ -306,14 +306,73 @@ Repeat the following list 3 times:</br>
  </br>
 
 •	Vertical Push -- Do as many <a href = "https://www.youtube.com/watch?v=IOlHTsmfr68 ">Assisted Dips</a> as you can </br>
-
+</br>
 •	Horizontal Pull -- Do as many <a href = "https://www.youtube.com/watch?v=Qj8ixEU638M">Ring Rows</a> as you can  </br>
-
+</br>
 •	Shoulders -- 5 <a href = "https://www.youtube.com/watch?v=icD6a_JcCbQ"> Depression Scapular Pull-Ups</a>  </br>
-
+</br>
 •	Shoulders -- 5 <a href = "https://youtu.be/6P9r0UAdwXM?t=69">Retraction Scapular Pull-Ups</a> </br>
  </br>
 
+<h2> Week 4-6 </h2>
+- Choose 3 Non-consecutive days to do this workout (takes about 1 hour) </br>
+- take a minute of rest after every bullet point </br>
+
+•	(Optional) Lose Weight - Jump Rope for 10 min or Traverse for 10 min </br>
+
+Repeat the following list 3 times: </br>
+
+•	Core – Do as many <a href = "https://youtu.be/riAutegDqdI?t=73"> V-Ups </a> as you can </br>
+<a href = "https://youtu.be/riAutegDqdI?t=73"> </a>
+</br>
+•	Core – Do as many <a href = "https://www.youtube.com/watch?v=NeAtimSCxsY">Russian Twists </a> as you can with 10 lbs. </br>
+</br>
+•	Vertical Pull - Do as many Pull-ups as you can.  Afterwards, do as many normal pull-ups as you can with a elastic band </br>
+</br>
+•	Horizontal Push - Do as many <a href = "https://www.youtube.com/watch?v=7enjS7Y2LYc">Ring Push-ups </a> as you can. Afterwards, do as many normal push-ups as you can </br>
+</br>
+
+•	Fingers - 6 <a href = "https://youtu.be/7bS-19Cl8Kk?t=120">Repeaters </a> with 2.5 lbs held by feet. 10 or 15mm edge </br>
+</br>
+•	Vertical Push – 10 sec <a href = "https://www.youtube.com/watch?v=C07M-t0_Vxg">Ring Support Hold </a> </br>
+</br>
+•	Horizontal Pull - Do as many <a href = "https://www.youtube.com/watch?v=RTPzzjQQYIU">One Arm Ring Rows</a> as you can </br>
+</br>
+•	Shoulders - 5 <a href = "https://www.youtube.com/watch?v=a8n_V0oiifw">One Arm Depression Scapular Pull-Ups</a>. </br>
+</br>
+•	Shoulders - 5 <a href = "https://www.youtube.com/watch?v=OYRAFPM2yDI">Tucked Lever Pulls</a> </br>
+</br>
+
+<h2> Week 7-9 </h2>
+- Choose 3 Non-consecutive days to do this workout (takes about 1 hour)
+- take a minute of rest after every bullet point 
+
+•	(Optional) Lose Weight - Jump Rope for 10 min or Traverse for 10 min
+</br>
+Repeat the following list 3 times:
+</br>
+•	Core – 15 <a href = "https://www.youtube.com/watch?v=l4kQd9eWclE">Leg-Ups</a>
+
+</br>
+•	Core – 6 (3 on each side) <a href = "https://www.youtube.com/watch?v=hrS3QsNqvTQ">Lying Windshield Wipers</a>
+
+</br>
+•	Core – 5 <a href = "https://youtu.be/aEgyCi1J1qI?t=83">Knee Ab Wheel Rollouts</a>. Don’t count reps where you can’t come back up.
+
+</br>
+•	Vertical Pull - Do as many Pull-ups as you can.  Afterwards, do as many normal pull-ups as you can with a elastic band
+</br>
+•	Horizontal Push - Do as many <a href = "https://www.youtube.com/watch?v=svLqaM6-cnQ">Knee Flies</a> as you can. Afterwards, do as many normal push-ups as you can
+
+</br>
+•	Fingers – 5sec Max Hang with 5lb held by feet. 10 or 15mm edge
+</br>
+•	Vertical Push – Do as many Dips as you can
+</br>
+•	Horizontal Pull - Do as many <a href = "https://www.youtube.com/watch?v=OH3QZB8oDkg">Inclined Ring Rows</a> as you can 
+</br>
+•	Shoulders – 5 <a href = "https://www.youtube.com/watch?v=UZ4XlVNmGtk">One Leg Lever Pulls</a>
+</br>
 	<h2>Finger Strength Exercises</h2> 
 </br>
 </br><h3>Hangboard</h3>
