--- a/index.html
+++ b/index.html
@@ -267,26 +267,27 @@ body {
 	Russian Dips </br>
 -->
 	<h2>Updates:</h2>
-	
-Intermediate Workout: (draft) </br>
 
-pike pushup 15reps x 3 sets 1min rests</br>
-x push up 15reps x 3 sets 1min rests</br>
+My Current Workout ;) </br>
 
-leaning pullup 7reps x 5 sets 3min rests</br>
-band pulls 7reps x 5 sets 3min rests</br>
+Swinging Ring Support Hold 15 secs x 1 set </br>
+30 Degree Ring Cross 10 secs x 3 sets 3min rests</br>
 
-leaning row 7reps x 5 sets 3min rests</br>
-one arm row 7reps x 5 sets 3min rests</br>
+Straight Lever Pulls 5reps x 3 sets 3min rests</br>
+Tucked Planche Swings 10reps x 3 sets 3min rests</br>
 
-scapular pullup depression 5reps x 1 set</br>
-scapular pullup retraction 5reps x 5 sets 3min rests</br>
+Repeaters 6reps x 3 sets 3min rests</br>
+Ring Taps 5reps x 3 sets 3min rests</br>
 
-tucked lying windwhield wiper 5reps x 5sets 3min rests</br>
-leg raises 15reps x 3 sets 1min rests</br>
+ Dragon Flags 3reps x 3 sets 3 min rests</br>
+ Asymmetrical Ring Flies 10 reps x 3 sets 3min rests</br>
+
+One Arm Flies 10 reps x 3 sets 3min rests</br>
+Weighted One-Arm Pullups 1rep x 3 sets 3min rests 5lb</br>
 </br>
 </br>
-<h2>New-to-Training Workout // Week 1-3 </h2>  </br>
+<h2>New-to-Training Workout </h2>
+<h3> Week 1-3 </h3>  </br>
 - Choose 3 Non-consecutive days to do this workout (8MinuteAbs can be everyday) (takes about 1 hour)</br>
 - take a minute of rest after every bullet point </br>
 
@@ -314,7 +315,7 @@ Repeat the following list 3 times:</br>
 •	Shoulders -- 5 <a href = "https://youtu.be/6P9r0UAdwXM?t=69">Retraction Scapular Pull-Ups</a> </br>
  </br>
 
-<h2> Week 4-6 </h2>
+<h3> Week 4-6 </h3>
 - Choose 3 Non-consecutive days to do this workout (takes about 1 hour) </br>
 - take a minute of rest after every bullet point </br>
 
@@ -343,7 +344,7 @@ Repeat the following list 3 times: </br>
 •	Shoulders - 5 <a href = "https://www.youtube.com/watch?v=OYRAFPM2yDI">Tucked Lever Pulls</a> </br>
 </br>
 
-<h2> Week 7-9 </h2>
+<h3> Week 7-9 </h3>
 - Choose 3 Non-consecutive days to do this workout (takes about 1 hour)
 - take a minute of rest after every bullet point 
 
