--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@ body {
 
 <div class="container" id="p0">
     <div class="page-header"> 
-	<h1 class="bg-info"> Suggested Workout</h1>
+	<h1 class="bg-info"> My Current Workout ;) </h1>
 </div>
 	<!--
 	<button data-toggle="collapse" data-target="#myCollapsible0" class="btn btn-warning">Show/Hide Suggested Workout</button>
@@ -268,7 +268,6 @@ body {
 -->
 	<h2>Updates:</h2>
 
-My Current Workout ;) </br>
 
 Swinging Ring Support Hold 15 secs x 1 set </br>
 30 Degree Ring Cross 10 secs x 3 sets 3min rests</br>
@@ -286,7 +285,11 @@ One Arm Flies 10 reps x 3 sets 3min rests</br>
 Weighted One-Arm Pullups 1rep x 3 sets 3min rests 5lb</br>
 </br>
 </br>
-<h2>New-to-Training Workout </h2>
+
+<div class="page-header"> 
+	<h1 class="bg-info"> New-to-Training Workout </h1>
+</div>
+
 <h3> Week 1-3 </h3>  </br>
 - Choose 3 Non-consecutive days to do this workout (8MinuteAbs can be everyday) (takes about 1 hour)</br>
 - take a minute of rest after every bullet point </br>
@@ -374,7 +377,11 @@ Repeat the following list 3 times:
 </br>
 •	Shoulders – 5 <a href = "https://www.youtube.com/watch?v=UZ4XlVNmGtk">One Leg Lever Pulls</a>
 </br>
-	<h2>Finger Strength Exercises</h2> 
+
+<div class="page-header"> 
+	<h1 class="bg-info"> Finger Strength </h1>
+</div>
+
 </br>
 </br><h3>Hangboard</h3>
 </br>
@@ -429,7 +436,11 @@ Repeat the following list 3 times:
 </br>
 
 <img src = "mascotstand.png" class = "center">
-<h2>Progressions </h2>
+
+<div class="page-header"> 
+	<h1 class="bg-info"> Progressions </h1>
+</div>
+
 </br>Work on the first exercise of each Progression list.   Once you are able to do the full amount of reps + sets in one session, try adding reps + sets until you can do the next exercise in the list. (videos to come!)
  
 </br>
