--- a/index.html
+++ b/index.html
@@ -269,17 +269,17 @@ body {
 	<h2>Updates:</h2>
 
 
-Swinging Ring Support Hold 15 secs x 1 set </br>
+	<a href = "https://www.youtube.com/watch?v=357JIuFF4-Q"> Swinging Ring Support Hold </a> 15 secs x 1 set </br>
 30 Degree Ring Cross 10 secs x 3 sets 3min rests</br>
 
 Straight Lever Pulls 5reps x 3 sets 3min rests</br>
-Tucked Planche Swings 10reps x 3 sets 3min rests</br>
+<a href = "https://youtu.be/dtsrFeWjx3g?t=698"> Tucked Planche Swings </a> 10reps x 3 sets 3min rests</br>
 
 Repeaters 6reps x 3 sets 3min rests</br>
-Ring Taps 5reps x 3 sets 3min rests</br>
+<a href = "https://youtu.be/dtsrFeWjx3g?t=1049"> Ring Taps </a> 5reps x 3 sets 3min rests</br>
 
  Dragon Flags 3reps x 3 sets 3 min rests</br>
- Asymmetrical Ring Flies 10 reps x 3 sets 3min rests</br>
+<a href = "https://youtu.be/yUkD5fBD3rA?t=266"> Asymmetrical Ring Flies </a> 10 reps x 3 sets 3min rests</br>
 
 One Arm Flies 10 reps x 3 sets 3min rests</br>
 Weighted One-Arm Pullups 1rep x 3 sets 3min rests 5lb</br>
