--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@ Weighted One-Arm Pullups 1rep x 3 sets 3min rests 5lb</br>
 </br>
 
 <div class="page-header"> 
-	<h1 class="bg-info"> New-to-Training Workout </h1>
+	<h1 class="bg-info"> Beginner Workout </h1>
 </div>
 
 <h3> Week 1-3 </h3>  </br>
@@ -379,7 +379,7 @@ Repeat the following list 3 times:
 </br>
 
 <div class="page-header"> 
-	<h1 class="bg-info"> Finger Strength </h1>
+	<h1 class="bg-info"> Finger Strength Exercises (Tendons) </h1>
 </div>
 
 </br>
@@ -438,7 +438,7 @@ Repeat the following list 3 times:
 <img src = "mascotstand.png" class = "center">
 
 <div class="page-header"> 
-	<h1 class="bg-info"> Progressions </h1>
+	<h1 class="bg-info"> Progression Exercises (Muscles) </h1>
 </div>
 
 </br>Work on the first exercise of each Progression list.   Once you are able to do the full amount of reps + sets in one session, try adding reps + sets until you can do the next exercise in the list. (videos to come!)
