--- a/index.html
+++ b/index.html
@@ -285,6 +285,29 @@ One Arm Flies 10 reps x 3 sets 3min rests</br>
 Weighted One-Arm Pullups 1rep x 3 sets 3min rests 5lb</br>
 </br>
 </br>
+<div class="container" id="p0">
+    <div class="page-header"> 
+	<h1 class="bg-info"> Climbing Session Workouts </h1>
+</div>
+	
+	<strong> Pyramid: </strong> </br>
+[Your max V grade minus 3]:  Do 4 climbs at this grade. </br>
+[Your max V grade minus 2]:  Do 3 climbs at this grade. </br>
+[Your max V grade minus 1]:  Do 2 climbs at this grade. </br>
+[Your max V grade]:  Do 1 climb at this grade. </br>
+</br>
+<strong> Ladder: </strong> </br>
+Do one climb at each V grade, starting at V0, until you reach [your max V grade].  Then do work your way down the grade scale. </br>
+</br>
+<strong> Four by Four </strong> </br>
+Step 1: Choose 4 boulder problems that are [your max V grade -2].  
+Step 2: Attempt each of them once without taking breaks between problems.  
+Step 3: Rest for 4 minutes.
+Step 4: Repeat steps 2 and 3, three more times.
+</br>
+<strong> Red Point </strong> </br>
+Attempt all boulder problems at [your max V grade] in the gym.  Only give each problem 3 attempts at most.
+</br>
 
 <div class="page-header"> 
 	<h1 class="bg-info"> Beginner Workout </h1>
