--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@ Choose a boulder problem.  Each time you grab or step on a new hold, you cannot 
 </br>
 
 <strong> One Hold Type (Hand and Foot Placement):  </strong> </br>
-Choose a boulder problem and a type of hold (Sloper, Pincher, Undercling, Sidepull, Crimp).  Whenever you grab a hold, you must place your hand on it, as if it was the chosen hold type.  </br>
+Choose a boulder problem and a type of hold (Sloper, Pincher, Undercling, Sidepull, Crimp).  Whenever you grab a hold, you must grip it as if it was the chosen hold type.  </br>
 </br>
 
 
