--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ body {
 </div>
 
 	
-<!--
+
 	<p>	MENU LINKS are currently broken but wil be fixed SOON. In the meantime, a page about my upcoming iPhone App is under construction.. </p>
 	
 <div class="container" style="margin-bottom: 30px">
@@ -135,7 +135,7 @@ body {
     	<div class="col-sm-4">
         	<div class="part-image">
         		<a href="https://rjk79.github.io/tt/dipsandironcross">
-            	<img src="ropeclimb2.jpg" class="img-responsive bodyarea">
+            	<img src="purplebutton.png" class="img-responsive bodyarea">
             	</a>
             	<div class="centered"><h3>Pushing Strength</h3></div> 
         </div>
@@ -224,7 +224,7 @@ body {
 </div>
 	
 </div>
--->
+
 
 
 <hr>
