--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ body {
     	<div class="col-sm-4">
         	<div class="part-image">
         		<a href="https://rjk79.github.io/tt/dipsandironcross">
-            	<img src="purplebutton.png" class="img-responsive bodyarea">
+            	<img src="purplebutton.png" class="img-responsive">
             	</a>
             	<div class="centered"><h3>Pushing Strength</h3></div> 
         </div>
