--- a/index.html
+++ b/index.html
@@ -127,8 +127,6 @@ body {
 </div>
 
 	
-
-	<p>	MENU LINKS are currently broken but wil be fixed SOON. In the meantime, a page about my upcoming iPhone App is under construction.. </p>
 	
 <div class="container" style="margin-bottom: 30px">
 	<div class="row">
@@ -144,7 +142,7 @@ body {
         <div class="col-sm-4">
         	<div class="part-image">
 				<a href="https://rjk79.github.io/tt/fliesandplanche">
-            	<img src="chest2.jpg" class="img-responsive bodyarea">
+            	<img src="purplebutton.png" class="img-responsive">
             	</a>        
             	<div class="centered"><h3>Compression</h3></div>
 		</div>
@@ -153,7 +151,7 @@ body {
    		<div class="col-sm-4">
         	<div class="part-image">
 				<a href="https://rjk79.github.io/tt/dragonflag">
-            	<img src="back2.jpg" class="img-responsive bodyarea">
+            	<img src="purplebutton.png" class="img-responsive">
             	</a>        
             	<div class="centered"><h3>Core Tension</h3></div>
 		</div>
@@ -166,7 +164,7 @@ body {
     	<div class="col-sm-4">
         	<div class="part-image">
 				<a href="https://rjk79.github.io/tt/supermanflies">
-            	<img src="Rings.png" class="img-responsive bodyarea">
+            	<img src="purplebutton.png" class="img-responsive ">
             	</a>        
             	<div class="centered"><h3>Overhead Shoulders</h3></div>
         </div>
@@ -175,7 +173,7 @@ body {
         <div class="col-sm-4">
         	<div class="part-image">
 				<a href="https://rjk79.github.io/tt/windshieldwiper">
-            	<img src="legs3.jpg" class="img-responsive bodyarea">
+            	<img src="purplebutton.png" class="img-responsive">
             	</a>        
             	<div class="centered"><h3>Twisting</h3></div>
 		</div>
@@ -184,7 +182,7 @@ body {
    		<div class="col-sm-4">
         	<div class="part-image">
 				<a href="https://rjk79.github.io/tt/frontlever">
-            	<img src="plan1.jpg" class="img-responsive bodyarea">
+            	<img src="purplebutton.png" class="img-responsive ">
             	</a>        
             	<div class="centered"><h3>Core Tension 2</h3></div>
 		</div>
@@ -198,7 +196,7 @@ body {
     	<div class="col-sm-4">
         	<div class="part-image">
 				<a href="https://rjk79.github.io/tt/invertedrows">
-            	<img src="Rings.png" class="img-responsive bodyarea">
+            	<img src="purplebutton.png" class="img-responsive">
             	</a>        
             	<div class="centered"><h3>Shoulder Blade Retraction</h3></div>
         </div>
@@ -207,7 +205,7 @@ body {
         <div class="col-sm-4">
         	<div class="part-image">
 				<a href="https://rjk79.github.io/tt/onearmpullups">
-            	<img src="legs3.jpg" class="img-responsive bodyarea">
+            	<img src="purplebutton.png" class="img-responsive">
             	</a>        
             	<div class="centered"><h3>Arms</h3></div>
 		</div>
@@ -216,7 +214,7 @@ body {
    		<div class="col-sm-4">
         	<div class="part-image">
 				<a href="https://rjk79.github.io/tt/muscleup">
-            	<img src="plan1.jpg" class="img-responsive bodyarea">
+            	<img src="purplebutton.png" class="img-responsive">
             	</a>        
             	<div class="centered"><h3>Power</h3></div>
 		</div>
