--- a/index.html
+++ b/index.html
@@ -264,7 +264,6 @@ body {
 	Asymmetrical Flies</br>
 	Russian Dips </br>
 -->
-	<h2>Updates:</h2>
 
 
 	<a href = "https://www.youtube.com/watch?v=357JIuFF4-Q"> Swinging Ring Support Hold </a> 15 secs x 1 set </br>
@@ -273,8 +272,10 @@ body {
 Straight Lever Pulls 5reps x 3 sets 3min rests</br>
 <a href = "https://youtu.be/dtsrFeWjx3g?t=698"> Tucked Planche Swings </a> 10reps x 3 sets 3min rests</br>
 
-Repeaters 6reps x 3 sets 3min rests</br>
+Repeaters on 7mm edge 6reps x 3 sets 3min rests</br>
 <a href = "https://youtu.be/dtsrFeWjx3g?t=1049"> Ring Taps </a> 5reps x 3 sets 3min rests</br>
+
+Weighted (+35lb) Repeaters on 10mm edge with 6reps x 3 sets 3min rests</br>
 
  Dragon Flags 3reps x 3 sets 3 min rests</br>
 <a href = "https://youtu.be/yUkD5fBD3rA?t=266"> Asymmetrical Ring Flies </a> 10 reps x 3 sets 3min rests</br>
