--- a/index.html
+++ b/index.html
@@ -264,8 +264,15 @@ body {
 	Asymmetrical Flies</br>
 	Russian Dips </br>
 -->
-
-
+10/2018</br>
+Depth Jumps</br>
+Squat Jumps</br>
+Front Lever</br>
+Weighted One-Arm Pull-Ups</br>
+30degree Cross</br>
+Compressions</br>
+	
+9/2018</br>
 	<a href = "https://www.youtube.com/watch?v=357JIuFF4-Q"> Swinging Ring Support Hold </a> 15 secs x 1 set </br>
 30 Degree Ring Cross 10 secs x 3 sets 3min rests</br>
 
